--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,22 +3,22 @@ name: Unit Testing
 on:
   push:
     branches:
-      - main  # Adjust branch name as needed
+      - main # Adjust branch name as needed
   pull_request:
     branches:
-      - main  # Adjust branch name as needed
+      - main # Adjust branch name as needed
 
 jobs:
   test:
     name: Unit Test
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Run Jest tests
-      run: npm test
+      - name: Run Jest tests
+        run: npm test
